...
    <string name="terms">Terms</string>
    <string name="open_map">Open Map</string>
    <string name="the_best_choice_for_your_hiking_journey">The best choice for your hiking journey!</string>
    <string name="pick_image_from">Pick image from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="typing">"Typing… "</string>
    <string name="successful_added_the_hike_with_id">"Successful added the Hike with ID: "</string>
    <string name="location_settings_are_not_enabled">Location settings are not enabled.</string>
    <string name="location_permission_is_required_for_this_app_to_work">Location permission is required for this app to work.</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_hike">Delete hike</string>
...
